# geek_egret_helper

./: CMakeLists.txt  README.md
config/: config.json  exePaths.json
docs/: LOG.md  README.md
inc/: add_window.h  common.h  config.h  config_window.h  deviceAPP.h  device_window.h  ge_json.h  ge_window.h  greet_window.h  help_window.h  main_window.h  tool_window.h  ui_add_window.h  ui_config_window.h  ui_device_window.h  ui_ge_window.h  ui_greet_window.h  ui_help_window.h  ui_main_window.h  ui_tool_window.h
inc/device/: adc_card_window.h  deviceAPP.h  ui_adc_card_window.h
res/: logo.rc  resource.h
res/ui/: adc_card_window.ui  add_window.ui  config_window.ui  device_window.ui  ge_helper.qrc  ge_window.ui  greet_window.ui  help_window.ui  main_window.ui  tool_window.ui
src/: add_window.cpp  common.cpp  config.cpp  config_window.cpp  deviceAPP.cpp  device_window.cpp  ge_json.cpp  ge_window.cpp  greet_window.cpp  help_window.cpp  main.cpp  main_window.cpp  tool_window.cpp
src/device/: adc_card_window.cpp
